syntax = "proto3";

package depMan;
option go_package="./depManpb";

message Deployment {
    string name = 1;
    uint32 replicas = 2;
}

message ReplicaRequest {
    string name = 1;
    uint32 replicas = 2;
    string namespace = 3;
}

message ReplicaResponse {
    Deployment exist = 1;
    Deployment expected = 2;
}

message ListRequest {
    string namespace = 1;
}

message ListResponse {
    repeated Deployment deployment = 1;
}

service DepManService{
    rpc Get(ReplicaRequest) returns (Deployment);
    rpc Set(ReplicaRequest) returns (ReplicaResponse);
    rpc List(ListRequest) returns (ListResponse);
}